--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
-MONGO_URI=mongodb+srv://<mongo_user>:<mongo_user_password>@<mongo_cluster>.hwfev.mongodb.net/?retryWrites=true&w=majority&appName=<mongo_cluster>
-MONGO_DBNAME=<mongo_cluster>
+# MongoDB
+MONGO_URI=mongodb://root:example@mongo:27017/
+MONGO_DBNAME=taskmanager
+
+# Redis
+REDIS_URL=redis://redis:6379/0
+
+# App
 SECRET_KEY=dev
-ENV=dev
-REDIS_URL=dev
+ENV=development
+
+# Email (opcional)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-specific-password
