--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          pytest --cov=flaskr tests/
+          pytest tests/
