feat: add `.env.example` and comments

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,32 @@
-# MongoDB
-MONGO_URI=mongodb://root:example@mongo:27017/
-MONGO_DBNAME=taskmanager
+# Configurações do Flask
+FLASK_APP=flaskr
+FLASK_ENV=development  # development ou production
+SECRET_KEY=your-secret-key-here  # Chave secreta para JWT e sessões
+PORT=5000  # Porta onde o Flask irá rodar
 
-# Redis
-REDIS_URL=redis://redis:6379/0
+# Configurações do MongoDB
+MONGO_URI=mongodb://mongo:27017/task_manager  # URI de conexão com MongoDB
+MONGO_DBNAME=task_manager  # Nome do banco de dados
 
-# App
-SECRET_KEY=dev
-ENV=development
+# Configurações do Redis
+REDIS_URL=redis://redis:6379/0  # URI de conexão com Redis
+REDIS_TTL=300  # Tempo de vida do cache em segundos (5 minutos)
 
-# Email (opcional)
-MAIL_SERVER=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USE_TLS=True
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-specific-password
+# Configurações de Email
+MAIL_SERVER=smtp.gmail.com  # Servidor SMTP
+MAIL_PORT=587  # Porta do servidor SMTP
+MAIL_USE_TLS=True  # Usar TLS
+MAIL_USERNAME=your-email@gmail.com  # Email para envio
+MAIL_PASSWORD=your-app-password  # Senha do email (app password para Gmail)
+MAIL_DEFAULT_SENDER=your-email@gmail.com  # Email padrão para envio
+
+# Configurações de JWT
+JWT_SECRET_KEY=your-jwt-secret-key  # Chave secreta para JWT (pode ser igual à SECRET_KEY)
+JWT_EXPIRATION=300  # Tempo de expiração do JWT em segundos (5 minutos)
+
+# Configurações de CORS
+CORS_ORIGINS=http://localhost:3000  # Origins permitidos para CORS (separar múltiplos com vírgula)
+
+# Configurações de Debug
+DEBUG=True  # Habilitar modo debug
+TESTING=False  # Habilitar modo de teste
