env: add more fields on `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ CORS_ORIGINS=http://localhost:3000  # Origins permitidos para CORS (separar múl
 # Configurações de Debug
 DEBUG=True  # Habilitar modo debug
 TESTING=False  # Habilitar modo de teste
+
+# Adicionar variável de ambiente para TTL do token de reset
+RESET_TOKEN_TTL=3600  # 1 hora em segundos
