--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build: .
     ports:
       - "5000:5000"
+    volumes:
+      - .:/app
     environment:
       - FLASK_APP=flaskr
       - FLASK_ENV=development
